Update from https://github.com/dominikzorgnotti/transform-vmware-product-builds-to-json/commit/aadd2b5238e897ff5aa7ce086c3669715638eaf9

--- a/table/kb52075_vmware_vsan_table0_release_as-table.json
+++ b/table/kb52075_vmware_vsan_table0_release_as-table.json
@@ -651,7 +651,7 @@
         {
             "index":51,
             "VxRail Release":"4.7.510",
-            "System Version":"4.7.511 - 26492623",
+            "System Version":"4.7.510 - 26492623",
             "Esxi (Version - Build #)":"6.7 P02 - 16075168",
             "VxRail manager":"4.7.510 - 16222977",
             "vSAN":"6.7 P02",
@@ -664,8 +664,8 @@
             "index":52,
             "VxRail Release":"4.7.511",
             "System Version":"4.7.511 - 26539430",
-            "Esxi (Version - Build #)":"6.7 EP15",
-            "VxRail manager":"4.7.511 16388606",
+            "Esxi (Version - Build #)":"6.7 EP15 - 16316930",
+            "VxRail manager":"4.7.511 - 16388606",
             "vSAN":"6.7 P02",
             "Internal vCSA":"6.7 P02",
             "External vCSA":"6.7 P02",
@@ -674,14 +674,158 @@
         },
         {
             "index":53,
+            "VxRail Release":"4.7.515",
+            "System Version":"4.7.515 - 26640584",
+            "Esxi (Version - Build #)":"6.7 P03 - 16713306",
+            "VxRail manager":"4.7.515 - 16804010",
+            "vSAN":"6.7 P03",
+            "Internal vCSA":"6.7 P03",
+            "External vCSA":"6.7 P03",
+            "External vCSA":"6.7 P03",
+            "External vCSA":null
+        },
+        {
+            "index":54,
+            "VxRail Release":"4.7.520",
+            "System Version":"4.7.520 - 26691291",
+            "Esxi (Version - Build #)":"6.7 EP16 - 16773714",
+            "VxRail manager":"4.7.520 - 16969877",
+            "vSAN":"6.7 EP16",
+            "Internal vCSA":"6.7 U3j",
+            "External vCSA":"6.7 U3j",
+            "External vCSA":"6.7 U3j",
+            "External vCSA":null
+        },
+        {
+            "index":55,
+            "VxRail Release":"4.7.521",
+            "System Version":"4.7.521 - 26742258",
+            "Esxi (Version - Build #)":"6.7 EP17 - 17098360",
+            "VxRail manager":"4.7.521 - 17137408",
+            "vSAN":"6.7 EP17",
+            "Internal vCSA":"6.7 U3j",
+            "External vCSA":"6.7 U3j",
+            "External vCSA":"6.7 U3j",
+            "External vCSA":null
+        },
+        {
+            "index":56,
+            "VxRail Release":"4.7.525",
+            "System Version":"4.7.525 - 26769857",
+            "Esxi (Version - Build #)":"6.7 P04 - 17167734",
+            "VxRail manager":"4.7.525 - 17225047",
+            "vSAN":"6.7 P04",
+            "Internal vCSA":"6.7 U3l",
+            "External vCSA":"6.7 U3l",
+            "External vCSA":"6.7 U3l",
+            "External vCSA":null
+        },
+        {
+            "index":57,
+            "VxRail Release":"4.7.526",
+            "System Version":"4.7.526 - 26792886",
+            "Esxi (Version - Build #)":"6.7 P04 - 17167734",
+            "VxRail manager":"4.7.526 - 17298699",
+            "vSAN":"6.7 P04",
+            "Internal vCSA":"6.7 U3l",
+            "External vCSA":"6.7 U3l",
+            "External vCSA":"6.7 U3l",
+            "External vCSA":null
+        },
+        {
+            "index":58,
+            "VxRail Release":"4.7.527",
+            "System Version":"4.7.527 - 26902834",
+            "Esxi (Version - Build #)":"6.7 EP18 - 17499825",
+            "VxRail manager":"4.7.527 - 17663315",
+            "vSAN":"6.7 EP18",
+            "Internal vCSA":"6.7 U3l",
+            "External vCSA":"6.7 U3l",
+            "External vCSA":"6.7 U3l",
+            "External vCSA":null
+        },
+        {
+            "index":59,
             "VxRail Release":"7.0.000",
             "System Version":"7.0.000 - 26451670",
-            "Esxi (Version - Build #)":"7.0 15843807",
+            "Esxi (Version - Build #)":"7.0 - 15843807",
             "VxRail manager":"7.0.000 - 26451670",
             "vSAN":"7.0",
             "Internal vCSA":"7.0",
             "External vCSA":"7.0",
             "External vCSA":"7.0",
+            "External vCSA":null
+        },
+        {
+            "index":60,
+            "VxRail Release":"7.0.010",
+            "System Version":"7.0.010 - 26590399",
+            "Esxi (Version - Build #)":"7.0b - 16324942",
+            "VxRail manager":"7.0.010 - 26590399",
+            "vSAN":"7.0b",
+            "Internal vCSA":"7.0.b",
+            "External vCSA":"7.0.b",
+            "External vCSA":"7.0.b",
+            "External vCSA":null
+        },
+        {
+            "index":61,
+            "VxRail Release":"7.0.100",
+            "System Version":"7.0.100 - 26719865",
+            "Esxi (Version - Build #)":"7.0U1 - 16850804",
+            "VxRail manager":"7.0.100 - 26719865",
+            "vSAN":"7.0U1",
+            "Internal vCSA":"7.0U1",
+            "External vCSA":"7.0U1",
+            "External vCSA":"7.0U1",
+            "External vCSA":null
+        },
+        {
+            "index":62,
+            "VxRail Release":"7.0.101",
+            "System Version":"7.0.101 - 26770072",
+            "Esxi (Version - Build #)":"7.0U1 EP2 - 17168206",
+            "VxRail manager":"7.0.101 - 26770072",
+            "vSAN":"7.0U1 EP2",
+            "Internal vCSA":"7.0U1",
+            "External vCSA":"7.0U1",
+            "External vCSA":"7.0U1",
+            "External vCSA":null
+        },
+        {
+            "index":63,
+            "VxRail Release":"7.0.130",
+            "System Version":"7.0.130 - 26845144",
+            "Esxi (Version - Build #)":"7.0U1c - 17325551",
+            "VxRail manager":"7.0.130 - 26845144",
+            "vSAN":"7.0U1c",
+            "Internal vCSA":"7.0U1c",
+            "External vCSA":"7.0U1c",
+            "External vCSA":"7.0U1c",
+            "External vCSA":null
+        },
+        {
+            "index":64,
+            "VxRail Release":"7.0.131",
+            "System Version":"7.0.131 - 26875681",
+            "Esxi (Version - Build #)":"7.0U1d - 17551050",
+            "VxRail manager":"7.0.131 - 26875681",
+            "vSAN":"7.0U1d",
+            "Internal vCSA":"7.0U1c",
+            "External vCSA":"7.0U1c",
+            "External vCSA":"7.0U1c",
+            "External vCSA":null
+        },
+        {
+            "index":65,
+            "VxRail Release":"7.0.132",
+            "System Version":"7.0.132 - 26894200",
+            "Esxi (Version - Build #)":"7.0U1d - 17551050",
+            "VxRail manager":"7.0.132 - 26894200",
+            "vSAN":"7.0U1d",
+            "Internal vCSA":"7.0U1c",
+            "External vCSA":"7.0U1c",
+            "External vCSA":"7.0U1c",
             "External vCSA":null
         }
     ]
